tests/js_error/source_locations/expression/super_call/construct_varargs.exp
Error: 
  ┌ tests/js_error/source_locations/expression/super_call/construct_varargs.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at A (tests/js_error/source_locations/expression/super_call/construct_varargs.js:3:11)
  at B (tests/js_error/source_locations/expression/super_call/construct_varargs.js:9:5)
  at <global> (tests/js_error/source_locations/expression/super_call/construct_varargs.js:13:1)